--- a/Crypto-Frontend/index.html
+++ b/Crypto-Frontend/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://s3.tradingview.com/tv.js"></script>
+
   </body>
 </html>
